using spam video

--- a/1. Einführung.ipynb
+++ b/1. Einführung.ipynb
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('Hello World')"
@@ -63,6 +65,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -76,7 +79,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f = 5.0\n",
@@ -87,6 +92,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -101,6 +107,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -113,7 +120,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a + 1"
@@ -122,7 +131,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "i + f"
@@ -162,7 +173,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def first_useless_function():\n",
@@ -181,13 +194,15 @@
     }
    },
    "source": [
-    "Bei der Definition von Funktionen kann mann auch immer Übergabeparameter definieren und sie können Ergebnisse zurückgeben."
+    "Bei der Definition von Funktionen kann man auch immer Übergabeparameter definieren und sie können Ergebnisse zurückgeben."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def function_with_parameter(spam, egg, ham):\n",
@@ -199,17 +214,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def function_with_result(spam):\n",
-    "    return spam\n"
+    "    return spam\n",
+    "function_with_result('egg')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def function_with_results(spam, egg):\n",
@@ -267,7 +287,7 @@
    "source": [
     "___Aufbau einer Pythondatei___\n",
     "\n",
-    "Die ersten Zeilen einer Pythondatei enthalten keine Code sondern beschreiben die Datei.\n",
+    "Die ersten Zeilen einer Pythondatei enthalten keinen Code sondern beschreiben die Datei.\n",
     "```Python\n",
     "#!/usr/bin/env python3\n",
     "# -*- coding: utf-8 -*-\n",
@@ -276,7 +296,7 @@
     "\"\"\"\n",
     "```\n",
     "\n",
-    "Dabei ist die erste Zeile `python #!/usr/bin/env python3` nur für unix basierte (Linux und MacOs) wichtig. Diese Zeile gibt an wie die Datei ausgeführt werden soll. In diese Fall soll die Datei mit `python3` ausgeführt werden. Ist diese Zeile vorhanden, dann kann man die Datei auch einfach mit Aufruf __./datei.py__ ausführen.\n",
+    "Dabei ist die erste Zeile `python #!/usr/bin/env python3` nur für unix basierte (Linux und MacOs) wichtig. Diese Zeile gibt an wie die Datei ausgeführt werden soll. In diesem Fall soll die Datei mit `python3` ausgeführt werden. Ist diese Zeile vorhanden, dann kann man die Datei auch einfach mit Aufruf __./datei.py__ ausführen.\n",
     "\n"
    ]
   },
@@ -367,7 +387,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "module_var = 5 #Gilt im ganzen Modul/Datei\n",
@@ -393,7 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "GLOBAL_VAR = 'Achtung'\n",
@@ -409,6 +433,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -429,6 +454,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -482,7 +508,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -503,7 +531,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sub_module"
@@ -523,7 +553,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sub_module"
@@ -543,7 +575,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sub_module.AGLOBALVARIABLE"
@@ -552,7 +586,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sub_module.imported_function()"
@@ -572,7 +608,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sub_module import imported_function\n",
@@ -600,7 +638,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from other_module import just_a_function\n",
@@ -621,7 +661,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sub_module import *\n",
@@ -693,7 +735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
